# createx

./: README.md  build.sh  todo
cmake_createx/: CMakeLists.txt  auto.sh  execute.sh
cmake_createx/app/: CMakeLists.txt  main.cc  main.cpp
cmake_createx/configured/: CMakeLists.txt  config.hpp.in
cmake_createx/src/: CMakeLists.txt
cmake_createx/src/append_library/: CMakeLists.txt  append_tex_file.cpp  append_tex_file.h
cmake_createx/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
cmake_createx/src/search_library/: CMakeLists.txt  search_library.cpp  search_library.h
cmake_createx/src/verification_library/: CMakeLists.txt  verification_library.cc  verification_library.h  verify_arg.cpp  verify_arg.h  verify_files.cpp  verify_tex_file.cpp  verify_tex_file.h
cmake_createx/test/: CMakeLists.txt  test_main.cpp
cmake_createx/tests/: main.cc
createx/: createx.sh  test.sh
intermediate_project/: createx.cpp
intermediate_project/app/: main.cc
intermediate_project/src/my_lib/: my_lib.cc  my_lib.h
